tests/negative/test_cn_asgn_cn_data.orb
data Foo {
    x:i32
};

fnc makeFoo() Foo {
    let f:Foo;
    ret f;
};

fnc main() () {
    let f1:(Foo cn) (makeFoo);
    let f2:Foo;
    = f1 f2;
};